--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,7 @@ build: off  # будем использовать свой скрипт сбор
 
 install:
   # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
-  - java -jar ./api-ci/rest/artifacts/app-mbank.jar &
+  - java -jar ./aqa-code1/api-ci/rest/artifacts/app-mbank.jar &
 
 build_script:
-  - ./api-ci/rest/gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./aqa-code1/api-ci/rest/gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
