--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,13 +4,13 @@ stack: jdk 11  # версия JDK
 
 branches:
   only:
-    - main  # ветка git
+    - master  # ветка git
 
 build: off  # будем использовать свой скрипт сборки
 
 install:
   # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
-  - java -jar ./aqa-code1/api-ci/rest/artifacts/app-mbank.jar &
+  - java -jar ./artifacts/app-mbank.jar &
 
 build_script:
-  - ./aqa-code1/api-ci/rest/gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
