--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,4 +13,4 @@ install:
   - java -jar artifacts/app-mbank.jar &
 
 build_script:
-  - gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - aqa-code1/api-ci/rest/gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
